# python-hrflow-api

./: .env.example  .flake8  .gitignore  .gitmodules  Documentation.md  HrFlow.ipynb  LICENSE.txt  Makefile  README.md  README.rst  __init__.py  check.sh  example.ipynb  pyproject.toml  run_test  setup.py  tag.sh  test.py
examples/: Profile Endpoints.ipynb  Source Endpoints.ipynb  Test Hrflow (Profile).ipynb  Test Hrflow (Source).ipynb
examples/colab/: HRFlow_Job_API.ipynb  HRFlow_Profile_API.ipynb  ai_profile_embedding.ipynb  build_personalized_ai_hr_models.ipynb  hrflow_job_api.ipynb  hrflow_profile_api.ipynb  implement_hrflow_in_5min.ipynb  scoring_evaluation_notebook.ipynb  upload_tracking_data.ipynb
examples/job/: job_endpoints_examples.ipynb
examples/profile/: profile_endpoints_examples.ipynb
hrflow/: __init__.py  __version__.py  bytesutils.py  client.py  filter.py  hmacutils.py  hrflow.py  job.py  profile.py  schemas.py  source.py  webhook.py
hrflow/auth/: __init__.py
hrflow/board/: __init__.py
hrflow/core/: __init__.py  validation.py
hrflow/document/: __init__.py  embedding.py  parsing.py
hrflow/exporter/: __init__.py
hrflow/hrflow/: hrflow.py  schemas.py
hrflow/hrflow/board/: __init__.py
hrflow/hrflow/document/: __init__.py  embedding.py  linking.py  parsing.py  revealing.py
hrflow/hrflow/job/: __init__.py  asking.py  embedding.py  indexing.py  parsing.py  reasoning.py  scoring.py  searching.py  storing.py
hrflow/hrflow/profile/: __init__.py  attachment.py  embedding.py  indexing.py  parsing.py  reasoning.py  revealing.py  scoring.py  searching.py  storing.py
hrflow/hrflow/rating/: __init__.py
hrflow/importer/: __init__.py
hrflow/job/: __init__.py  asking.py  embedding.py  grading.py  indexing.py  matching.py  parsing.py  reasoning.py  scoring.py  searching.py  storing.py  upskilling.py  validator.py
hrflow/profile/: __init__.py  asking.py  attachment.py  attachments.py  embedding.py  exporter.py  feedback.py  grading.py  importer.py  indexing.py  matching.py  metadata.py  metadatas.py  parsing.py  reasoning.py  revealing.py  scoring.py  searching.py  storing.py  tag.py  tags.py  unfolding.py  upskilling.py  validator.py
hrflow/rating/: __init__.py
hrflow/source/: __init__.py
hrflow/text/: __init__.py  embedding.py  geocoding.py  imaging.py  linking.py  ocr.py  parsing.py  tagging.py
hrflow/tracking/: __init__.py
hrflow/utils/: __init__.py  evaluation.py  limit_rate.py  scoring.py  searching.py  storing.py  validation.py
hrflow/webhook/: __init__.py  base64Wrapper.py  hmacutils.py
hrflow/workflow/: __init__.py
test/: Test Hrflow (Exporter).ipynb  Test Hrflow (Importer).ipynb  Test Hrflow (Job).ipynb  Test Hrflow (Webhook).ipynb  stats_score.csv  test.py
test_assets/: __init__.py  test_config.py
tests/: config.py  test_api.py  test_auth.py  test_hello.py  test_job.py  test_profile.py  test_rate_limit.py  test_text.py
tests/utils/: enums.py  schemas.py  tools.py
(+14 files in other folders)
