[tool.poetry]
name = "python-hrflow-api"
version = "0.1.0"
description = ""
authors = ["Moustapha Ebnou <moustapha.ebnou@hrflow.ai>"]
readme = "README.md"
packages = [{include = "python_hrflow_api"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
