[tool.poetry]
name = "hrflow"
version = "3.1.1"
description = "Python hrflow.ai API package"
authors = ["HrFlow.ai <contact@hrflow.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hrflow/python-hrflow-api"
documentation = "https://github.com/hrflow/python-hrflow-api"
exclude = ["Makefile", ".pre-commit-config.yaml", "manifest.json", "tests", "poetry.lock"]
packages = [{include = "hrflow"}]

[tool.poetry.urls]
"HrFlow.ai Documentation" = "https://developers.hrflow.ai"
"Changelog" = "https://github.com/Riminder/python-hrflow-api/releases"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
